hopefully fixed deadlock by moving context menu into gui thread some other minor improvements
git-svn-id: svn://localhost:8080/caleydo_main/trunk@5187 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3